--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,10 @@
+name                   = "singler"
+account_id             = "c3c8faa9e948021616316f48cdec254a"
+compatibility_date     = "2025-07-02"
+
+pages_build_output_dir = "."
+functions              = "functions"
+
 kv_namespaces = [
   { binding = "USERS", id = "9621ab90ad4a42f185de93d1d213270a" },
   { binding = "FILES", id = "b74d4f69ad6d47ad9d81c911ac876178" }
